backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: app-k8s-on
    labels:
        app: backend
spec:
    replicas: 3
    selector:
      matchLabels:
        app: backend
    template:
        metadata:
            labels:
                app: backend
        spec:
            containers:
            - name: backend-client
              image: 172.16.14.26:5000/justme/myweb
              imagePullPolicy: IfNotPresent
---
apiVersion: v1
kind: Service
metadata:
    name: app-k8s-on
    labels:
        app: backend
spec:
    type: NodePort
    selector:
        app: backend
    ports:
        - protocol: TCP
          port: 80
          targetPort: 80
