ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
    name: app-k8s-on
    annotations:
      kubernetes.io/ingress.class: alb
      alb.ingress.kubernetes.io/scheme: internet-facing
      alb.ingress.kubernetes.io/target-type: ip 
      alb.ingress.kubernetes.io/healthcheck-path: /health

spec:
  rules:
    - http:
        paths: 
          - path: /*
            backend:
              serviceName: app-k8s-on
              servicePort: 80
